--- a/index.html
+++ b/index.html
@@ -28,15 +28,10 @@
 <td> 10 </td>
 <td> 3500$ </td>
 </tr>
-
-
-
-
-
-
-
-
-
 </table>
+  <div id="sfcrt8blpbg2bzxwddnuul899qsphuslgt2"></div>
+<script type="text/javascript" src="https://counter4.optistats.ovh/private/counter.js?c=rt8blpbg2bzxwddnuul899qsphuslgt2&down=async" async></script>
+<noscript><a href="https://www.contatoreaccessi.com" title="contatore"><img src="https://counter4.optistats.ovh/private/contatoreaccessi.php?c=rt8blpbg2bzxwddnuul899qsphuslgt2" border="0" title="contatore" alt="contatore"></a></noscript>
+
 </body>
 </html>
